Fixed image from about section overflowing in chrome based browsers

--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ a:active {
 }
 
 #aboutImg {
-    width: 200%;
+    width: 20rem;
 }
 
 .section {
